# someproject

./: README.md
GAMES-105/lab1/: Lab1_FK_answers.py  Lab2_IK_answers.py  task1_forward_kinematics.py  task2_inverse_kinematics.py
imagewarping/: .gitignore  CMakeSettings.json
imagewarping/cmake/: InitUCMake.cmake
imagewarping/src/App/: ImageWidget.cpp  ImageWidget.h  main.cpp  mainwindow.cpp  mainwindow.h
minidraw/: .gitignore  CMakeLists.txt  CMakeSettings.json
minidraw/src/App/: CMakeLists.txt  Circle.cpp  Circle.h  Clean.cpp  Clean.h  Colorcombox.cpp  Colorcombox.h  Curve.cpp  Curve.h  Elli.cpp  Elli.h  Freeline.cpp  Freeline.h  Line.cpp  Poly.cpp  Poly.h  Rect.cpp  main.cpp  minidraw.cpp  minidraw.h  shape.cpp  shape.h  viewwidget.cpp  viewwidget.h
stars/: force.py  stars.py  test.py
tinyraycaster/: .gitignore  CMakeLists.txt  tinyraycaster.cpp
tinyraytracing/: CMakeLists.txt  geometry.h  old_geometry.h  out.ppm  raytracing.cpp  scene.ppm  utils.cpp  utils.h
tinyrenderer/: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  tgaimage.h
